fixed bug with navbar not displaying correctly on mobile devices

--- a/static/css/sass/_nav.scss
+++ b/static/css/sass/_nav.scss
@@ -223,7 +223,7 @@ a.user-link, a.bag-link {
         width: 25px;
     }
 
-    .misc-links {
+    ul.misc-links {
         display: none;
     }
 
