--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -218,7 +218,7 @@ a.user-link, a.bag-link {
     width: 25px;
   }
 
-  .misc-links {
+  ul.misc-links {
     display: none;
   }
 
